--- a/job_deepspeed.yaml
+++ b/job_deepspeed.yaml
@@ -20,7 +20,7 @@ entrypoint: >
   --zero_stage 1
   --log_interval 1
 
-image_uri: anyscale/ray:2.53.0-slim-py312-cu128
+image_uri: anyscale/ray:2.53.0-py312-cu128
 
 working_dir: .
 
