--- a/job_deepspeed.yaml
+++ b/job_deepspeed.yaml
@@ -1,6 +1,8 @@
 # Anyscale Job: Ray Train + DeepSpeed AutoTP Tensor Parallelism
 # This job runs training with DeepSpeed AutoTP for tensor parallelism
 #
+# For verification, run job_ddp.yaml FIRST to create shared initial weights.
+#
 # Submit with: anyscale job submit -f job_deepspeed.yaml
 # Or with custom args: anyscale job submit -f job_deepspeed.yaml --entrypoint "python train_deepspeed.py --tp_size 4 --dp_size 2 --num_workers 8"
 
@@ -17,8 +19,12 @@ entrypoint: >
   --batch_size 2
   --seq_length 1024
   --num_epochs 1
+  --learning_rate 1e-5
   --zero_stage 1
   --log_interval 1
+  --debug_steps 100
+  --loss_output_dir /mnt/cluster_storage/loss_curves
+  --init_weights_path /mnt/cluster_storage/shared_weights/init_weights.pt
 
 image_uri: anyscale/ray:2.53.0-py312-cu128
 
